[metadata]
name = largestinteriorrectangle
version = attr: largestinteriorrectangle.__version__
description = Fast Largest Interior Rectangle calculation
long_description = file: README.md
long_description_content_type = text/markdown
author = Lukas Weber
author_email = l.a.weber@outlook.de
license = Apache License 2.0
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3 :: Only
project_urls =
	Source = https://github.com/lukasalexanderweber/lir
    Bug Tracker = https://github.com/lukasalexanderweber/lir/issues

[options]
packages = find:
install_requires =
    numba
include_package_data = True
zip_safe = False

[options.packages.find]
include = largestinteriorrectangle
exclude = tests
